kubernetes/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: node-tp
spec:
  replicas: 1
  selector:
   matchLabels:
    app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4
        ports:
          - containerPort: 80
        resources: {}
        volumeMounts:
          - mountPath: /data/pgadmin
            name: pgadmin
      restartPolicy: Always
      volumes:
        - name: pgadmin
          hostPath:
            path: /home/pierre/data_pgadmin
            type: DirectoryOrCreate
