kubernetes/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: node-tp
spec:
  ports:
    - name: "1234"
      port: 1234
      targetPort: 80
  selector:
    app: pgadmin
status:
  loadBalancer: {}
