kubernetes/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: node-tp
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin-node.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 1234
            path: /
